--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -21,16 +21,16 @@ pre {
 }
 
 a {
-  color: #000;
+  color: #ffffff;
+  text-decoration: none;
 }
 
 a:visited {
-  color: #666;
+  color: #ffffff;
 }
 
 a:hover {
-  color: #fff;
-  background-color: #000;
+  color: #dae0f2;
 }
 
 th {
