--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,4 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<h1 class="Quizzy">Quizzy</h1>
+<div class="StartButton">
+  <%= link_to 'Начать игру', room_index_path %>
+</div>
