--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,19 @@
-// Place all the styles related to the welcome controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
+.Quizzy {
+  margin-top: 250px;
+  color: #ff499e;
+  font-size: 250px;
+}
+
+.StartButton {
+  margin-top: 300px;
+  text-align: center;
+  padding: 20px;
+  width: 300px;
+  height: 15px;
+  background-color: #ff499e;
+  color: #ffffff;
+  border-radius: 10px;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: bold;
+}
