--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,5 +1,6 @@
 body {
-  background-color: #363b3e;
+  overflow: hidden;
+  background-color: #363b3e !important;
   color: #ffffff;
   margin: 33px;
 }
