--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,5 @@
 <h1 class="Quizzy">Quizzy</h1>
+<p class="DoIt">Сразись со своими друзьями</p>
 <div class="StartButton">
   <%= link_to 'Начать игру', room_index_path %>
 </div>
